fix untargetable nav menu in mobile (z-index issue)

--- a/insure-landing-page-master/styles.css
+++ b/insure-landing-page-master/styles.css
@@ -106,7 +106,6 @@ hr {
   flex-direction: row;
   justify-content: space-between;
   padding: 1.5rem 1.5rem;
-  z-index: 500;
 }
 
 .nav__menu {
